# whoah-cli

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
assets/: Dockerfile.squid-ssl  entrypoint.sh  pkg-cache-nginx.conf  squid-ssl-bump.conf
demo/: demo.tape
examples/: oxide_mockup.rs
scripts/: provision-helios-vm.sh  provision-wsl-host.sh
src/: action.rs  app.rs  event.rs  lib.rs  logging.rs  main.rs
src/cli/: config.rs  init.rs  migrate.rs  mod.rs  recover.rs  status.rs
src/config/: editor.rs  loader.rs  mod.rs  types.rs
src/git/: mod.rs  provider_github.rs
src/ops/: demo.rs  deploy.rs  discover.rs  hypervisor_proxmox_validate.rs  import.rs  mod.rs  nexus.rs  pipeline.rs  pkg_cache.rs  prereqs.rs  proxmox.rs  recover.rs  serial.rs  ssh_log.rs  status.rs  watchdog.rs
src/parse/: cargo_progress.rs  disk.rs  dladm.rs  mod.rs  network.rs  omicron_pkg_log.rs  pkg_progress.rs  services.rs  xtask_download.rs  zones.rs  zpool.rs
src/ssh/: auth.rs  direct.rs  download.rs  handler.rs  mock.rs  mod.rs  oneshot.rs  probe.rs  registry.rs  session.rs
src/tui/: layout.rs  mod.rs  theme.rs
src/tui/components/: alert_bar.rs  build_view.rs  config_detail.rs  config_view.rs  debug_view.rs  deployment_panel.rs  disk_panel.rs  git_ref_selector.rs  hypervisor_panel.rs  log_panel.rs  mod.rs  popup_picker.rs  recovery_view.rs  status_bar.rs  status_panel.rs
tests/: ssh_streaming_test.rs
